--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.swp
 *.tar.xz
 *.trs
+*.pcap
 .deps/
 .dirstamp
 .libs/
@@ -41,3 +42,4 @@ cmake_install.cmake
 CMakeCache.txt
 libmiracle-shared.a
 install_manifest.txt
+.vimrc
